@@ -2,25 +2,25 @@
 # Copyright (c) 2010-2012 Michael Howitz
 # See also LICENSE.txt
 
-import hurry.jqueryui
-import hurry.resource
+import fanstatic
+import js.jqueryui
 import os.path
 
+
 # CSS
-css = hurry.resource.Library('css', os.path.join('resources', 'css'))
+css_lib = fanstatic.Library('css', os.path.join('resources', 'css'))
 
 
-reset_css = hurry.resource.ResourceInclusion(css, 'reset.css')
-base_css = hurry.resource.ResourceInclusion(
-    css, 'base.css', depends=[reset_css])
-table_css = hurry.resource.ResourceInclusion(css, 'table.css')
-form_css = hurry.resource.ResourceInclusion(css, 'form.css')
-no_max_content_css = hurry.resource.ResourceInclusion(
-    css, 'no_max_content.css', depends=[form_css])
-import_css = hurry.resource.ResourceInclusion(css, 'wizard.css')
+reset_css = fanstatic.Resource(css_lib, 'reset.css')
+base_css = fanstatic.Resource(css_lib, 'base.css', depends=[reset_css])
+table_css = fanstatic.Resource(css_lib, 'table.css')
+form_css = fanstatic.Resource(css_lib, 'form.css')
+no_max_content_css = fanstatic.Resource(
+    css_lib, 'no_max_content.css', depends=[form_css])
+import_css = fanstatic.Resource(css_lib, 'wizard.css')
 
 # JavaScript
-js = hurry.resource.Library('js', os.path.join('resources', 'js'))
+js_lib = fanstatic.Library('js', os.path.join('resources', 'js'))
 
-masterdata_fields = hurry.resource.ResourceInclusion(
-    js, 'masterdata_fields.js', depends=[hurry.jqueryui.jqueryui])
+masterdata_fields = fanstatic.Resource(
+    js_lib, 'masterdata_fields.js', depends=[js.jqueryui.jqueryui])
