@@ -4,25 +4,10 @@
    i18n_domain="icemac.addressbook">
 
   <browser:resourceDirectory
-      name="css"
-      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
-      directory="css"
-      permission="zope.Public"
-      />
-
-  <browser:resourceDirectory
       name="img"
       layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
       directory="img"
       permission="zope.Public"
       />
-
-  <browser:resourceDirectory
-      name="js"
-      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
-      directory="js"
-      permission="zope.Public"
-      />
-
 
 </configure>
