@@ -83,7 +83,6 @@
   <include package="zope.mimetype" />
   <include package="icemac.ab.locales" />
   <include package="z3c.preference" />
-  <include package="hurry.zoperesource" />
 
   <include
       zcml:condition="installed z3c.ptcompat"
